# BISEN

./: .gitignore  CMakeLists.txt  Findsodium.cmake  README.md  run.sh
BooleanSSE/: MainTEE.c  MainUEE.cpp  MainUEE.hpp  SseSimple.cpp  SseSimple.hpp  Utils.c  Utils.h  main.cpp
BooleanSSE.xcodeproj/: project.pbxproj
BooleanSSE.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
Client/: .gitignore  ClientCrypt.cpp  ClientCrypt.hpp  ClientUtils.cpp  ClientUtils.h  EnglishAnalyzer.cpp  EnglishAnalyzer.h  Makefile  QueryParser.cpp  QueryParser.hpp  README.md  SseClient.cpp  SseClient.hpp  SseCrypt.cpp  SseCrypt.hpp  Utils.c  Utils.h  _TODOremove.cpp  main.cpp
Client/text/: 1984_1.txt  1984_2.txt  sherlock_1.txt  sherlock_2.txt
Clusion/: .gitignore  README.md  pom.xml
Clusion/salt/: saltInvIX  saltSetM
Data/: README.md  enron-parser.py  enron-parser.sh  parser.py
Iee/: IeeCrypt.cpp  IeeCrypt.hpp  IeeUtils.cpp  IeeUtils.h  Makefile  QueryEvaluator.cpp  QueryEvaluator.hpp  SseIee.cpp  SseIee.hpp  main.cpp
Server/: Makefile  ServerUtils.cpp  ServerUtils.hpp  SseServer.cpp  SseServer.hpp  main.cpp
Test/: README.md  main.cpp
libsodium-bisen/: README.md
libsodium-bisen/libsodium-sgx/: README.md  copyobjs.sh  makefile  sodium-sgx-renamed.h
libsodium-bisen/libsodium-sgx/src/: utils.c
libsodium-bisen/libsodium-sgx/tests/: makefile  test1-renamed.c  test1.c
libsodium-bisen/tsgx_integration/: README  main.c  makefile  types.h
libsodium-bisen/tsgx_integration/example1/: commands.c  crypto.c  crypto.h  f.c  fserver.c
results/: clusion-update  datasets  res-upgrd-script  searches.sh  trace-searches  trace-searches10000  trace-updates-old  updates.sh
results/clusion/: bisen-src100  bisen-src50  bisen-updates  clusion100  clusion50  clusion75
results/clusion/2ndrun/: out1000ssd  out250  out500
results/datasheets/: clusion.xlsx  search-results.xlsx  update-results.xlsx
results/old/: not-tests  trace-updates
results/old/clusion/: bisen-src75  results-filter0,2.xlsx
results/old/trace-searches/: searches10000-extrabool  searches15000-extrabool
results/old/trace-searches-divided/: 10000  5000
results/old/unsorted-results/: aa  newset  searches-fixed  searches-fixed2  searches-new  searches-new-big
results/old/word-frequency/: 20000
results/trace-searches/: searches5000  searches5000-extrabool
results/trace-searches-divided/: 15000
results/unsorted-results/: aab  aac  searches-fixed3  severalnots  updates-new
results/wiki/: bisen-3M-unordered-client  bisen-3M-unordered-iee  bisen-3M-unordered-server  bisen-full-unordered-client  bisen-iee-100k  bisen-iee-1M  bisen-iee-1_5M  bisen-iee-2M  bisen-iee-2_5M  bisen-iee-500k  bisen-server-100k  bisen-server-1M  bisen-server-1_5M  bisen-server-2M  bisen-server-2_5M  bisen-server-500k  queries  results-bisen.xlsx
results/wiki-right/graphs/: tl.gnu
results/wiki/client/: bisen-2.5M-client  bisen-full-client
results/wiki/graphs/: cnf-dnf.in  gen_graph.sh  neg-table  not.in  search-separated.tl  selectivity.in  separated-search.in  separated-update.in  separated.gnu  update-separated.tl  words.in
results/wiki/iee/: bisen-iee-100k  bisen-iee-1M  bisen-iee-20k  bisen-iee-2_5M  bisen-iee-500k
results/wiki/negations/: bisen-ieenot-1M  bisen-ieenot-1_5M  bisen-ieenot-2M  bisen-ieenot-500k  bisen-servernot-1M  bisen-servernot-1_5M  bisen-servernot-2M  bisen-servernot-500k
results/wiki/no network/: bisen-iee-100k  bisen-iee-1M  bisen-iee-1_5M  bisen-iee-20k  bisen-iee-2_5M  bisen-iee-500k  bisen-server-100k  bisen-server-1M  bisen-server-1_5M  bisen-server-20k  bisen-server-2_5M  bisen-server-500k
results/wiki/server/: bisen-server-100k  bisen-server-1M  bisen-server-20k  bisen-server-2_5M  bisen-server-500k
results/word-frequency/: 10000  100000  200000  5000  50000
src/: Definitions.h  Makefile  README.md  Utils.cpp  Utils.h  run.sh  vec_int.c  vec_token.c  vec_token.h
src/Client/: ClientCrypt.c  ClientCrypt.cpp  ClientCrypt.h  ClientUtils.h  EnglishAnalyzer.cpp  EnglishAnalyzer.h  Makefile  QueryParser.cpp  QueryParser.hpp  README.md  SseClient.cpp  SseClient.hpp  main.cpp
src/Common/: CMakeLists.txt  Utils.c  Utils.cpp  Utils.h
src/Data/: README.md  parser.py
src/Iee/: IeeCrypt.c  IeeCrypt.cpp  IeeCrypt.h  IeeCrypt.hpp  IeeUtils.cpp  IeeUtils.h  Makefile  QueryEvaluator.c  QueryEvaluator.cpp  QueryEvaluator.h  QueryEvaluator.hpp  SseIee.c  SseIee.cpp  SseIee.h  SseIee.hpp  SseIeeF.cpp  SseIeeF.hpp  commands.c  commands.h  fserver.c  fserver.h  main.c  main.cpp  ocall.c  ocall.h  types.h  vec_int.h  vec_token.c  vec_token.h
src/Iee/src/: QueryEvaluator.c  SseIee.c  f.c  fserver.c
src/Iee/util/: IeeUtils.c  IeeUtils.h  vec_int.c  vec_int.h  vec_token.c
src/Server/: Makefile  ServerUtils.hpp  SseServer.cpp  SseServer.hpp  hash_map.c
src/Test/: Makefile  commands.c  commands.h  generate_enron.cpp  generate_wiki.cpp  main.c  main.cpp  parser.py  server.cpp
src/Test/keys/: IeePriv.pem  IeePub.pem  Kcom
src/sgx/: SampleEnclave.edl  ocall.cpp  stdio.cpp  stdio.h
src/tsgx/: README.md  makefile  trace
src/tsgx-client/: .gitignore  makefile
src/tsgx-client/include/: attke.h  com.h  (+9 more)
src/tsgx-server/: README.md  keypair.c
(+86 files in other folders)
